fixed alignment of blog card for mobile

--- a/src/pages/Blog/Blog.css
+++ b/src/pages/Blog/Blog.css
@@ -55,7 +55,7 @@
 
 @media screen and (max-width: 520px) {
   .blog-section {
-    width: 75%;
+    width: 80%;
     margin: auto;
   }
   .BlogCardWrapper {
